force-app/main/default/objects/HCP_Enrollment__c/fields/Clinical_Trial_Profile__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Trial Profile</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipLabel>HCP Enrollments</relationshipLabel>
    <relationshipName>HCP_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>