force-app/main/default/objects/HCP_Enrollment__c/fields/Completed_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Completed_Orientation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>did the HCP complete orientation for this study?</inlineHelpText>
    <label>Completed Orientation</label>

    <type>Checkbox</type>
</CustomField>