force-app/main/default/objects/HCP_Enrollment__c/fields/Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Reason__c</fullName>
    <label>Deactivation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI no longer accepting referrals</fullName>
            </value>
            <value>
                <fullName>HCP referral funding maximum has been met</fullName>
            </value>
            <value>
                <fullName>Quality of referrals does not meet expectations</fullName>
            </value>
            <value>
                <fullName>At request of HCP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>