force-app/main/default/objects/HCP_Enrollment__c/fields/Degrees_of_Separation__c.field-meta.xml
<CustomField>
    <fullName>Degrees_of_Separation__c</fullName>
    <description># of HCP&#39;s separating PI and HCP to establish a connection based on DX Referrals &amp; RX Shared Patient.</description>
    <inlineHelpText>0 = No Connection
1 = Friends (HCP sent at least 1 dx-referral-patient)
2 = Friends of friends
3 = Friends of friends of friends
etc.</inlineHelpText>
    <label>Degrees of Separation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>