force-app/main/default/objects/HCP_Enrollment__c/fields/Divulge_Name__c.field-meta.xml
<CustomField>
    <fullName>Divulge_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HCP/Physician For IMS physicians only Did physician or proxy opt in to divulge name of IMS physician to PI</description>
    <inlineHelpText>HCP/Physician For IMS physicians only Did physician or proxy opt in to divulge name of IMS physician to PI</inlineHelpText>
    <label>Divulge Name</label>

    <type>Checkbox</type>
</CustomField>