force-app/main/default/objects/HCP_Enrollment__c/fields/Divulged_Name__c.field-meta.xml
<CustomField>
    <fullName>Divulged_Name__c</fullName>
    <description>HCP/Physician  For IMS physicians only If proxy opted in name role of proxy who opted in on behalf of IMS physician</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>HCP/Physician  For IMS physicians only If proxy opted in name role of proxy who opted in on behalf of IMS physician</inlineHelpText>
    <label>Divulged Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>