force-app/main/default/objects/HCP_Enrollment__c/fields/HCP_Account__c.field-meta.xml
<CustomField>
    <fullName>HCP_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HCP Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HCP Enrollments</relationshipLabel>
    <relationshipName>HCP_Enrollments</relationshipName>

    <type>Lookup</type>
</CustomField>