force-app/main/default/objects/HCP_Enrollment__c/fields/HCP_Contact__c.field-meta.xml
<CustomField>
    <fullName>HCP_Contact__c</fullName>
    <label>HCP Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HCP&#39;s Study Sites</relationshipLabel>
    <relationshipName>HCP_Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>

    <type>MasterDetail</type>
</CustomField>