force-app/main/default/objects/HCP_Enrollment__c/fields/HCP_Enrollment_Key__c.field-meta.xml
<CustomField>
    <fullName>HCP_Enrollment_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>HCP Enrollment Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>