force-app/main/default/objects/HCP_Enrollment__c/fields/HCP_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>HCP_Full_Name__c</fullName>
    <description>Field for Search</description>
    <formula>HCP_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP Full Name</label>
    <type>Text</type>
</CustomField>