force-app/main/default/objects/HCP_Enrollment__c/fields/HCP_Name__c.field-meta.xml
<CustomField>
    <fullName>HCP_Name__c</fullName>
    <formula>HCP_Contact__r.FirstName + &#39; &#39; + HCP_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP Name</label>

    <type>Text</type>
</CustomField>