force-app/main/default/objects/HCP_Enrollment__c/fields/HCP_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>HCP_Referral_Source__c</fullName>
    <description>The source of referral for HCP</description>
    <inlineHelpText>The source of referral for HCP</inlineHelpText>
    <label>HCP Referral Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACoE Data Source</fullName>
            </value>
            <value>
                <fullName>PI Recommended</fullName>
            </value>
            <value>
                <fullName>HCP Self Referral</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>