force-app/main/default/objects/HCP_Enrollment__c/fields/Is_Virtual_Study_Site__c.field-meta.xml
<CustomField>
    <fullName>Is_Virtual_Study_Site__c</fullName>
    <formula>ISPICKVAL(Study_Site__r.Study_Site_Type__c, &quot;Virtual&quot;)</formula>
    <label>Is Virtual Study Site</label>
    <type>Checkbox</type>
</CustomField>