force-app/main/default/objects/HCP_Enrollment__c/fields/Material_List_Date__c.field-meta.xml
<CustomField>
    <fullName>Material_List_Date__c</fullName>
    <description>HCP Material listing with date time of when things are sent</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>HCP Material listing with date time of when things are sent</inlineHelpText>
    <label>Material List Date</label>

    <type>Date</type>
</CustomField>