force-app/main/default/objects/HCP_Enrollment__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <label>On Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI resource constraints</fullName>
            </value>
            <value>
                <fullName>Quality of referrals</fullName>
            </value>
            <value>
                <fullName>At request of HCP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>