force-app/main/default/objects/HCP_Enrollment__c/fields/Orientation_Date__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Orientation Date</label>
    <type>Date</type>
</CustomField>