force-app/main/default/objects/HCP_Enrollment__c/fields/Override_PI_Status__c.field-meta.xml
<CustomField>
    <fullName>Override_PI_Status__c</fullName>
    <formula>TEXT( Study_Site__r.Override_PI_Referral_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Override PI Status</label>
    <type>Text</type>
</CustomField>