force-app/main/default/objects/HCP_Enrollment__c/fields/Patient_Count__c.field-meta.xml
<CustomField>
    <fullName>Patient_Count__c</fullName>
    <description>HCP Patient Density</description>
    <inlineHelpText>HCP Patient Density</inlineHelpText>
    <label>Patient Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>