force-app/main/default/objects/HCP_Enrollment__c/fields/PI_Account__c.field-meta.xml
<CustomField>
    <fullName>PI_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PI Account</label>
    <length>255</length>

    <type>Text</type>
</CustomField>