force-app/main/default/objects/HCP_Enrollment__c/fields/Pre_Screened_and_Did_Not_Qualify_Count__c.field-meta.xml
<CustomField>
    <fullName>Pre_Screened_and_Did_Not_Qualify_Count__c</fullName>
    <label>Pre-Screened and Did Not Qualify Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>