force-app/main/default/objects/HCP_Enrollment__c/fields/Referral_Limit_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Referral_Limit_Capacity__c</fullName>
    <description>HCP/Physician Referral limit capacity</description>
    <inlineHelpText>HCP/Physician Referral limit capacity</inlineHelpText>
    <label>Referral Limit Capacity</label>
    <precision>18</precision>
    <scale>0</scale>

    <type>Number</type>
</CustomField>