force-app/main/default/objects/HCP_Enrollment__c/fields/referred_who_have_enrolled__c.field-meta.xml
<CustomField>
    <fullName>referred_who_have_enrolled__c</fullName>
    <description># of referred patients who have enrolled into the study</description>
    <label># referred who have enrolled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>