force-app/main/default/objects/HCP_Enrollment__c/fields/referred_who_signed_consent__c.field-meta.xml
<CustomField>
    <fullName>referred_who_signed_consent__c</fullName>
    <description># of referred patients who signed consent into the study</description>
    <label># referred who signed consent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>