force-app/main/default/objects/HCP_Enrollment__c/fields/Share_Study_URL__c.field-meta.xml
<CustomField>
    <fullName>Share_Study_URL__c</fullName>
    <formula>Study_Site__r.Clinical_Trial_Profile__r.Share_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Share Study URL</label>
    <type>Text</type>
</CustomField>