force-app/main/default/objects/HCP_Enrollment__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <formula>Study_Site__r.Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site</label>
    <type>Text</type>
</CustomField>