force-app/main/default/objects/HCP_Enrollment__c/fields/Site_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Site_phone_number__c</fullName>
    <formula>Study_Site__r.Study_Site_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site phone number</label>
    <type>Text</type>
</CustomField>