force-app/main/default/objects/HCP_Enrollment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>HCP Status per clinical trial by PI</description>
    <inlineHelpText>HCP Status per clinical trial by PI</inlineHelpText>
    <label>HCP Status</label>

    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invitation Sent</fullName>
            </value>
            <value>
                <fullName>On Hold (Acceptance)</fullName>
            </value>
            <value>
                <fullName>Declined (Acceptance)</fullName>
            </value>
            <value>
                <fullName>Non-Responsive (Admin)</fullName>
            </value>
            <value>
                <fullName>Approval Pending</fullName>
            </value>
            <value>
                <fullName>Activation Pending</fullName>
            </value>
            <value>
                <fullName>Activation Pending Orientation</fullName>
            </value>
            <value>
                <fullName>Declined (Approval)</fullName>
            </value>
            <value>
                <fullName>On Hold (Approval)</fullName>
            </value>
            <value>
                <fullName>Declined (Activation)</fullName>
            </value>
            <value>
                <fullName>On Hold (Activation)</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Activated (Admin)</fullName>
            </value>
            <value>
                <fullName>On Hold (Admin)</fullName>
            </value>
            <value>
                <fullName>Declined (Admin)</fullName>
            </value>
            <value>
                <fullName>Deactivated (Admin)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>