force-app/main/default/objects/HCP_Enrollment__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>Captures reason for PI decline - mandatory to fill out if Status field is PI decline</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Reason</label>

    <type>TextArea</type>
</CustomField>