force-app/main/default/objects/HCP_Enrollment__c/fields/Study__c.field-meta.xml
<CustomField>
    <fullName>Study__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Study_Site__r.Clinical_Trial_Profile__c , Study_Site__r.Clinical_Trial_Profile__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study</label>
    <type>Text</type>
</CustomField>