force-app/main/default/objects/HCP_Enrollment__c/fields/Study_Site__c.field-meta.xml
<CustomField>
    <fullName>Study_Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Hospital of rainbow</description>
    <label>Study Site</label>
    <referenceTo>Study_Site__c</referenceTo>
    <relationshipLabel>Referring HCPs</relationshipLabel>
    <relationshipName>HCP_Enrollments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>