force-app/main/default/objects/HCP_Enrollment__c/fields/Study_Site_PI_Contact__c.field-meta.xml
<CustomField>
    <fullName>Study_Site_PI_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Site PI Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HCP Enrollments (PI Contact)</relationshipLabel>
    <relationshipName>HCP_Enrollments_SS_PI_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>