force-app/main/default/objects/HCP_Enrollment__c/fields/Study_Site_PI_Contact_OLD__c.field-meta.xml
<CustomField>
    <fullName>Study_Site_PI_Contact_OLD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Site PI Contact_OLD</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HCP Enrollments (PI Contact)</relationshipLabel>
    <relationshipName>HCP_Enrollments1</relationshipName>
    <type>Lookup</type>
</CustomField>