force-app/main/default/objects/HCP_Enrollment__c/fields/Study_Site_Status__c.field-meta.xml
<CustomField>
    <fullName>Study_Site_Status__c</fullName>
    <formula>TEXT(Study_Site__r.Override_Study_Site_Recruitment_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Site Status</label>
    <type>Text</type>
</CustomField>