force-app/main/default/objects/HCP_Enrollment__c/fields/Trial_Requires_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Trial_Requires_Orientation__c</fullName>
    <formula>Study_Site__r.Clinical_Trial_Profile__r.Orientation_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial Requires Orientation</label>
    <type>Checkbox</type>
</CustomField>