force-app/main/default/objects/HCP_Enrollment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCP</fullName>
                <default>true</default>
                <label>HCP</label>
            </value>
            <value>
                <fullName>HCP Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>