force-app/main/default/objects/HCP_Enrollment__c/fields/Virtual_PI_Contact__c.field-meta.xml
<CustomField>
    <fullName>Virtual_PI_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Virtual PI Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HCP Enrollments (Virtual PI Contact)</relationshipLabel>
    <relationshipName>HCP_Enrollments2</relationshipName>
    <type>Lookup</type>
</CustomField>