force-app/main/default/objects/HCP_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HCP_Contact__c</columns>
    <columns>Study__c</columns>
    <columns>Status__c</columns>
    <columns>Study_Site__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>