force-app/main/default/objects/HCP_Enrollment__c/listViews/HCP_Orientation_Status.listView-meta.xml
<ListView>
    <fullName>HCP_Orientation_Status</fullName>
    <columns>NAME</columns>
    <columns>HCP_Contact__c</columns>
    <columns>Completed_Orientation__c</columns>
    <columns>Study_Site__c</columns>
    <columns>Study__c</columns>
    <columns>Override_PI_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trial_Requires_Orientation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>HCP Orientation Status</label>
</ListView>