force-app/main/default/objects/HCP_Enrollment__c/listViews/HCPs_by_status.listView-meta.xml
<ListView>
    <fullName>HCPs_by_status</fullName>
    <columns>NAME</columns>
    <columns>HCP_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Study_Name__c</columns>
    <columns>Study_Site_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>HCPs by status</label>
    <language>en_US</language>
</ListView>