force-app/main/default/objects/HCP_Enrollment__c/listViews/HCPs_In_Pending_Status_5_Days.listView-meta.xml
<ListView>
    <fullName>HCPs_In_Pending_Status_5_Days</fullName>
    <columns>Study__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>N_DAYS_AGO:5</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>HCPs In Pending Status &gt; 5 Days</label>
</ListView>